--- a/src/css/style.css
+++ b/src/css/style.css
@@ -98,7 +98,7 @@ header
 	top: 0;
 	position: fixed;
 	padding-top: 10px;
-	height: 35px;
+	height: 25px;
 	background: #fff;
 	background: rgba(255,255,255,.7);
 	transition: top 0.65s ease-in;
@@ -203,34 +203,69 @@ page-top
 footer
 :::::::::::::::::::::::::::::::::::*/
 footer {
-	padding: 6px 0 10px;
+	padding: 10px 0 10px;
 	font-size: 15px;
 	text-align: center;
 	background-color: #333;
 	color: #fff;
 	margin-top: 100px;
 }
-
-
+footer small {
+	display: block;
+	font-size: 1rem;
+}
+footer .snsbox {
+	margin: 5px auto 0;
+	display: inline-block;
+}
+footer .snsbox li {
+	float: left;
+	padding-left: 5px;
+}
+footer .snsbox li a {
+	padding-left: 5px;
+}
+footer .snsbox li:before {
+	content: "/";
+}
+footer .snsbox li:first-child ,
+footer .snsbox li:first-child a {
+	padding-left: 0;
+}
+footer .snsbox li:first-child:before {
+	content: "";
+	display: none;
+	padding: 0 5px;
+}
+footer .snsbox li a {
+	color: #A1A1A1;
+}
 /*::::::::::::::::::::::::::::::::::
 content
 :::::::::::::::::::::::::::::::::::*/
 #content-wraper {
-	margin-top: 75px;
+	margin-top: 105px;
 }
-
+.pagettl h2 {
+	font-size: 2.3rem;
+	text-align: center;
+	padding: 10px 0;
+}
 
 /*::::::::::::::::::::::::::::::::::
 main-area
 :::::::::::::::::::::::::::::::::::*/
 
 .main-area {
-	background-color: #eee;
+	background: url("../img/fec_main_sample03.png") no-repeat center 57%;
+	-webkit-background-size: cover;
+	background-size: cover;
+	min-width: 980px;
 }
 .main-area .inner {
-	height: 450px;
+	height: 320px;
 	position: relative;
-	padding-top: 80px;
+	padding-top: 40px;
 	-moz-box-sizing: border-box;
 		-webkit-box-sizing: border-box;
 		-o-box-sizing: border-box;
@@ -407,6 +442,9 @@ speaker
 	margin-bottom: 17px;
 }
 .ih-item.circle.effect1 .spinner {
+	border-color: #F09A81 #34BBE5 #34BBE5 #F09A81;
+}
+.ih-item.circle.effect1 .spinner {
 	width: 150px;
 	height: 150px;
 	-webkit-transition:all 0.6s ease-in-out;
@@ -429,8 +467,8 @@ speaker
 	padding: 0;
 	border-top: none;
 }
-.ih-item.circle.effect1 .info p span {
-	font-size: 2rem;
+.ih-item.circle.effect1 .info p i {
+	font-size: 1.8rem;
 	color: #fff;
 }
 
@@ -499,6 +537,12 @@ SP
 /*::::::::::::::::::::::::::::::::::
 header
 :::::::::::::::::::::::::::::::::::*/
+	.main-area {
+		min-width: auto;
+	}
+	.cs {
+		font-size: 1.5rem;
+	}
 	.sp_ib {
 		display: inline-block;
 	}
@@ -736,6 +780,116 @@ header
 	#page-top {
 		bottom: 80px!important;
 	}
+}
 
 
+/* -----------------------------
+speaker.html
+------------------------------- */
+
+#speaker .column.hole .l h3 ,
+#speaker .column.hole .r h3 {
+	text-align: center;
+}
+#speaker .column {
+	position: relative;
+}
+#speaker .column .inner {
+	overflow: hidden;
+}
+#speaker #content-wraper {
+    margin-top: 115px;
+}
+#speaker .column.hole .l , .column.hole .r {
+	width: 45%;
+	border: 4px solid #333;
+	padding: 4px;
+	-moz-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		-o-box-sizing: border-box;
+		-ms-box-sizing: border-box;
+}
+.column.hole .r {
+	margin-left: 5%;
+}
+.speaker-list {
+	overflow: hidden;
+	margin-top: 20px;
+}
+.speaker-list li {
+	float: left;
+	width: 50%;
+}
+.speaker-list li:before {
+	content: "・";
+}
+.speaker-list li a {
+	color: #3089A5;
+}
+#speaker .column.a-hole {
+	background-color: #fff;
+}
+#speaker .column.a-hole {
+	background-color: #eee;
+}
+#speaker .inner .border {
+	border: 1px solid #333;
+	padding: 20px;
+}
+#speaker .column {
+	padding: 40px 0;
+}
+#speaker .column.hole {
+	padding: 0px 0px 40px;
+}
+#speaker .speaker-img {
+	float: left;
+}
+#speaker .speaker-img .img {
+	width: 150px;
+	border-radius: 50%;
+	overflow: hidden;
+}
+#speaker .speaker-detail {
+	width: 780px;
+	float: right;
+}
+#speaker .speaker-detail h1 {
+	font-size: 1.5rem;
+}
+#speaker .speaker-detail h1 + p {
+	margin-top: 20px;
+}
+#speaker .column .tag {
+	float: right;
+	overflow: hidden;
+}
+#speaker .column .tag li {
+	float: left;
+	padding-left: 6px;
+}
+#speaker .column .tag li a {
+	display: inline-block;
+	background-color: #F38869;
+	padding: 5px 10px;
+	color: #fff;
+	margin-left: 6px;
+}
+#speaker .column .tag li:before {
+	content: "/";
+	display: inline;
+}
+
+#speaker .column .tag li:first-child:before {
+	content: "";
+	display: none;
+	padding: 0 5px;
+}
+#speaker .time {
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color: #333;
+	color: #fff;
+	padding: 5px 10px;
 }
