--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -140,4 +140,7 @@ a:active , a:hover {text-decoration: none;}
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 	}
+	p , li {
+		font-size: 0.9rem;
+	}
 }
