--- a/ejs/speaker.ejs
+++ b/ejs/speaker.ejs
@@ -83,20 +83,20 @@
 			</div>
 		</div><!-- /.inner -->
 	</section><!-- /.column -->
-	
-	<section class="column speaker" id="A020">
+	<% speakers.forEach(function(speaker){ %>
+	<section class="column speaker" id="<%=speaker.code%>%>">
 		<div class="inner">
 		<div class="label time"></div>
 		<div class="label hole a-hole"></div>
 			<div class="cf">
 			<div class="speaker-img">
 					<p class="img">
-						<img src="./images/speakers/A020.jpg">
+						<img src="./images/speakers/<%=speaker.code%>.jpg">
 					</p><!-- /.img -->
 				</div><!-- /.speaker-img -->
 				<div class="speaker-detail">
-					<h1>桝田 草一</h1>
-					<p>HTML5は普及してきていますが、HTML5を拡張するための関連仕様であるWAI-ARIA（アクセシビリティ）やMicrodata（構造化データ）はHTML5そのものと比較してまだまだ使われていないのではないでしょうか。このセッションでは、WAI-ARIAやMicrodataをJavaScriptやCMSから利用するために具体的な実装方法や検証方法を紹介します。</p>
+					<h1><%=speaker.name%>%></h1>
+					<p><%=speaker.description%></p>
 				</div><!-- /.speaker-detail -->
 			</div><!-- /.cf -->
 			<ul class="tag">
@@ -105,96 +105,7 @@
 			</ul><!-- /.tag -->
 		</div><!-- /.inner -->
 	</section><!-- /.column speaker -->
-	
-	<section class="column speaker" id="A032">
-		<div class="inner">
-		<div class="label time"></div>
-		<div class="label hole a-hole"></div>
-			<div class="cf">
-			<div class="speaker-img">
-					<p class="img">
-						<img src="./images/speakers/A032.jpg">
-					</p><!-- /.img -->
-				</div><!-- /.speaker-img -->
-				<div class="speaker-detail">
-					<h1>中村 久司</h1>
-					<p>Sencha Touch で名を馳せた Sencha のフレームワークは、デスクトップ用の Ext JS と統合され、デスクトップからモバイルまで全てのデバイスをサポートするフレームワークとなりました。
-最新の Ext JS 6 について解説します。</p>
-				</div><!-- /.speaker-detail -->
-			</div><!-- /.cf -->
-			<ul class="tag">
-				<li><span>Aホール</span></li>
-				<li><span>豊臣</span></li>
-			</ul><!-- /.tag -->
-		</div><!-- /.inner -->
-	</section><!-- /.column speaker -->
-	
-	<section class="column speaker" id="A040">
-		<div class="inner">
-		<div class="label time"></div>
-		<div class="label hole a-hole"></div>
-			<div class="cf">
-			<div class="speaker-img">
-					<p class="img">
-						<img src="./images/speakers/A040.jpg">
-					</p><!-- /.img -->
-				</div><!-- /.speaker-img -->
-				<div class="speaker-detail">
-					<h1>竹洞 陽一郎</h1>
-					<p></p>
-				</div><!-- /.speaker-detail -->
-			</div><!-- /.cf -->
-			<ul class="tag">
-				<li><span>Aホール</span></li>
-				<li><span>豊臣</span></li>
-			</ul><!-- /.tag -->
-		</div><!-- /.inner -->
-	</section><!-- /.column speaker -->
-	
-	<section class="column speaker" id="B020">
-		<div class="inner">
-		<div class="label time"></div>
-		<div class="label hole a-hole"></div>
-			<div class="cf">
-			<div class="speaker-img">
-					<p class="img">
-						<img src="./images/speakers/B020.jpg">
-					</p><!-- /.img -->
-				</div><!-- /.speaker-img -->
-				<div class="speaker-detail">
-					<h1>榊原昌彦	</h1>
-					<p></p>
-				</div><!-- /.speaker-detail -->
-			</div><!-- /.cf -->
-			<ul class="tag">
-				<li><span>Aホール</span></li>
-				<li><span>豊臣</span></li>
-			</ul><!-- /.tag -->
-		</div><!-- /.inner -->
-	</section><!-- /.column speaker -->
-	
-	<section class="column speaker" id="B050">
-		<div class="inner">
-		<div class="label time"></div>
-		<div class="label hole a-hole"></div>
-			<div class="cf">
-			<div class="speaker-img">
-					<p class="img">
-						<img src="./images/speakers/B050.jpg">
-					</p><!-- /.img -->
-				</div><!-- /.speaker-img -->
-				<div class="speaker-detail">
-					<h1>Kite</h1>
-					<p></p>
-				</div><!-- /.speaker-detail -->
-			</div><!-- /.cf -->
-			<ul class="tag">
-				<li><span>Aホール</span></li>
-				<li><span>豊臣</span></li>
-			</ul><!-- /.tag -->
-		</div><!-- /.inner -->
-	</section><!-- /.column speaker -->
-	
+	<% });%>
 
 	<div id="page-top" class="hvr-icon-bob">
 		<a href="#content-wraper">PAGE TOP</a>
