デザイン変更

--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -9,24 +9,23 @@
 	<meta name="keywords" content="フロントエンド,関西フロントエンドUG,関西フロントエンドカンファレンス2016">
 	<meta property="og:title" content="関西フロントエンドカンファレンス2016">
 	<meta property="og:type" content="article">
-	<meta property="og:url" content="ダミーurl">
+	<meta property="og:url" content="http://kfug.github.io/frontconf2016/">
 	<meta property="og:site_name" content="関西フロントエンドカンファレンス2016">
 	<meta property="og:description" content="関西最大級のフロントエンドの祭典、forntend conference 2016!! 大阪梅田 にて 2016.03.05 開催!">
-	<meta property="og:image" content="img/">
+	<meta property="og:image" content="http://kfug.github.io/frontconf2016/img/">
 
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" media="all">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" media="all">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/ihover.min.css">
 	<link rel="stylesheet" href="css/hover.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
 	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="js/functions.js"></script>
 
-    <script type="text/javascript" charset="utf-8" src="edge_includes/edge.6.0.0.min.js"></script>
-    <style>
-        .edgeLoad-EDGE-10196486 { visibility:hidden; }
-    </style>
+	<script type="text/javascript" charset="utf-8" src="edge_includes/edge.6.0.0.min.js"></script>
+
 <script>
   AdobeEdge.loadComposition('main', 'EDGE-10196486', {
     scaleToFit: "none",
@@ -34,14 +33,14 @@
     minW: "0px",
     maxW: "undefined",
     width: "980px",
-    height: "450px"
+    height: "500px"
 }, {dom: [ ]}, {
     dom: [
         {
             id: 'bg_pattern',
             type: 'image',
             tag: 'img',
-            rect: ['0px', '0px', '980px', '450px', 'auto', 'auto'],
+            rect: ['0px', '0px', '980px', '500px', 'auto', 'auto'],
             fill: ["rgba(0,0,0,0)",'img/bg_pattern.jpg','0px','0px']
         },
         {
@@ -69,7 +68,7 @@
     style: {
         '${symbolSelector}': {
             isStage: true,
-            rect: [undefined, undefined, '980px', '450px']
+            rect: [undefined, undefined, '980px', '500px']
         }
     }
 });
@@ -94,7 +93,7 @@
 		<nav id="global-nav">
 			<ul>
 				<li><a href="#about" class="hvr-underline-from-center">ABOUT</a></li>
-				<!-- <li><a href="#news" class="hvr-underline-from-center">NEWS</a></li> -->
+				<li><a href="#news" class="hvr-underline-from-center">NEWS</a></li>
 				<!-- <li><a href="#timetable" class="hvr-underline-from-center">TIME TABLE</a></li> -->
 				<li><a href="#access" class="hvr-underline-from-center">ACCESS</a></li>
 				<li><a href="#speaker" class="hvr-underline-from-center">SPEAKER</a></li>
@@ -130,17 +129,49 @@
 
 	<section id="about" class="cont">
 		<div class="inner">
-			<h2>ABOUT</h2>
+			<h2><i class="fa fa-exclamation"></i><span>ABOUT</span></h2>
 			<h3>関西最大級のフロントエンドの祭典</h3>
-			<p>2016年03月05日　大阪梅田の新梅田研修センターにて、フロントエンドエンジニア/デザイナー向けイベントを開催します。</p>
+			<p>2016年03月05日　大阪梅田の新梅田研修センターにて、<br>フロントエンドエンジニア/デザイナー向けイベントを開催します。</p>
 			<p>デザイナー向け、エンジニア向け合わせて10以上のセッショントラックに加え、<br>もくもく会ブースやハンズオンブースなど初めての方でも気軽に楽しめる企画が盛り沢山!!</p>
 			<p>デザイナーもエンジニアもWebで働く全ての人のために。<br>関西最大級のフロントエンドイベントが今始まります!!</p>
 		</div><!-- /.inner -->
 	</section><!-- /#about -->
 
+
+	<section id="news" class="cont">
+		<div class="inner">
+			<h2><i class="fa fa-bell-o"></i><span>NEWS</span></h2>
+			<div class="newsbox">
+				<dl class="newsrow">
+					<dt><span class="day">2016.01.15</span><span class="label-new">new</span></dt>
+					<dd>ほにゃららほにゃらら<a href="#">ほにゃらら</a>ほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃらら</dd>
+				</dl><!-- /.newsrow -->
+				<dl class="newsrow">
+					<dt><span class="day">2016.01.15</span><span class="label-new">new</span></dt>
+					<dd>ほにゃららほにゃらら</dd>
+				</dl><!-- /.newsrow -->
+				<dl class="newsrow">
+					<dt><span class="day">2016.01.15</span><span class="label-new">new</span></dt>
+					<dd>ほにゃららほにゃらら</dd>
+				</dl><!-- /.newsrow -->
+				<dl class="newsrow">
+					<dt><span class="day">2016.01.15</span><span class="label-new">new</span></dt>
+					<dd>ほにゃららほにゃらら</dd>
+				</dl><!-- /.newsrow -->
+				<dl class="newsrow">
+					<dt><span class="day">2016.01.15</span><span class="label-new">new</span></dt>
+					<dd>ほにゃららほにゃらら</dd>
+				</dl><!-- /.newsrow -->
+				<p class="btn-read">
+					<a href="/news.html" class="hvr-underline-reveal"><i class="fa fa-angle-right"></i>Read more</a>
+				</p><!-- /.btn -->
+			</div><!-- /.newstable -->
+		</div><!-- /.inner -->
+	</section><!-- /#about -->
+
 	<section id="access" class="cont">
 		<div class="inner">
-			<h2>DATE/ACCESS</h2>
+			<h2><i class="fa fa-map-o"></i><span>DATE/ACCESS</span></h2>
 			<div class="mapbox cf">
 				<div class="l">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.126506277503!2d135.48678405582905!3d34.701989014726664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0x5b1c4510126e4191!2z5paw5qKF55Sw56CU5L-u44K744Oz44K_44O8!5e0!3m2!1sja!2sjp!4v1450943709081" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -159,7 +190,7 @@
 
 	<section id="speaker" class="cont">
 		<div class="inner">
-			<h2>SPEAKER</h2>
+			<h2><i class="fa fa-bullhorn"></i><span>SPEAKER</span></h2>
 			<ul class="list-speaker cf">
 				<% speakers.forEach(function(speaker){ %>
 				<li>
@@ -184,7 +215,7 @@
 
 	<section id="faq" class="cont">
 		<div class="inner">
-			<h2>FAQ</h2>
+			<h2><i class="fa fa-question"></i><span>FAQ</span></h2>
 
 			<p class="cs">comming soon!</p><!-- /.cs -->
 
@@ -207,11 +238,48 @@
 		</div><!-- /.inner -->
 	</section><!-- /#faq -->
 
-	<div class="sns-foot">
+
+	<section id="sponsor" class="cont">
 		<div class="inner">
-			<h3><img src="img/logo_kfug.png" alt="関西フロントエンドUG"></h3>
+			<h2><i class="fa fa-star"></i><span>Sponsor</span></h2>
+
+			<ul class="sponsor-list">
+				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
+			</ul><!-- /.sponsor-list -->
+
 		</div><!-- /.inner -->
-	</div><!-- /.sns-foot -->
+	</section><!-- /#sponsor -->
+
+	<section id="staff" class="cont">
+		<div class="inner">
+			<h2><i class="fa fa-users"></i><span>Staff</span></h2>
+
+			<ul class="staff-list">
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
+			</ul><!-- /.sponsor-list -->
+
+		</div><!-- /.inner -->
+	</section><!-- /#staff -->
+
 
 	<div id="page-top" class="hvr-icon-bob">
 		<a href="#content-wraper">PAGE TOP</a>
