--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -141,30 +141,22 @@
 	<section id="news" class="cont">
 		<div class="inner">
 			<h2><i class="fa fa-bell-o"></i><span>NEWS</span></h2>
-			<div class="newsbox">
-				<dl class="newsrow">
-					<dt><span class="day">2016.01.15</span><span class="label-new">new</span></dt>
-					<dd>ほにゃららほにゃらら<a href="#">ほにゃらら</a>ほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃららほにゃらら</dd>
+			<div class="newsbox" style="width: 100%">
+				<% news.forEach(function(newsline){ %>
+				<dl class="newsrow" >
+					<dt><span class="day"><%=newsline.date%></span><span class="label-new">new</span></dt>
+					<dd>
+						<%if(newsline.link){%>
+						<a href="<%=newsline.link%>"><%=newsline.title%></a>
+						<%}else{%>
+						<%=newsline.title%>
+						<%}%>
+					</dd>
 				</dl><!-- /.newsrow -->
-				<dl class="newsrow">
-					<dt><span class="day">2016.01.15</span><span class="label-new">new</span></dt>
-					<dd>ほにゃららほにゃらら</dd>
-				</dl><!-- /.newsrow -->
-				<dl class="newsrow">
-					<dt><span class="day">2016.01.15</span><span class="label-new">new</span></dt>
-					<dd>ほにゃららほにゃらら</dd>
-				</dl><!-- /.newsrow -->
-				<dl class="newsrow">
-					<dt><span class="day">2016.01.15</span><span class="label-new">new</span></dt>
-					<dd>ほにゃららほにゃらら</dd>
-				</dl><!-- /.newsrow -->
-				<dl class="newsrow">
-					<dt><span class="day">2016.01.15</span><span class="label-new">new</span></dt>
-					<dd>ほにゃららほにゃらら</dd>
-				</dl><!-- /.newsrow -->
-				<p class="btn-read">
-					<a href="/news.html" class="hvr-underline-reveal"><i class="fa fa-angle-right"></i>Read more</a>
-				</p><!-- /.btn -->
+				<% })%>
+				<!--<p class="btn-read">-->
+					<!--<a href="/news.html" class="hvr-underline-reveal"><i class="fa fa-angle-right"></i>Read more</a>-->
+				<!--</p>&lt;!&ndash; /.btn &ndash;&gt;-->
 			</div><!-- /.newstable -->
 		</div><!-- /.inner -->
 	</section><!-- /#about -->
@@ -195,7 +187,7 @@
 				<% speakers.forEach(function(speaker){ %>
 				<li>
 					<div class="ih-item circle colored effect1">
-						<a href="speaker.html#<%=speaker.code%>"><div class="spinner"></div>
+						<a data-href="speaker.html#<%=speaker.code%>"><div class="spinner"></div>
 							<div class="img">
 								<img src="./images/speakers/<%=speaker.code%>.jpg">
 							</div>
@@ -244,13 +236,9 @@
 			<h2><i class="fa fa-star"></i><span>Sponsor</span></h2>
 
 			<ul class="sponsor-list">
-				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/320x120/27709b/ffffff"></a></li>
+				<% sponsors.forEach(function(sponsor){ %>
+				<li><a data-href="#" target="_blank"><img width="80%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
+				<% })%>
 			</ul><!-- /.sponsor-list -->
 
 		</div><!-- /.inner -->
@@ -260,22 +248,23 @@
 		<div class="inner">
 			<h2><i class="fa fa-users"></i><span>Staff</span></h2>
 
-			<ul class="staff-list">
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-				<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>
-			</ul><!-- /.sponsor-list -->
+			<p class="cs">comming soon!</p><!-- /.cs -->
+			<!--<ul class="staff-list">-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
+			<!--</ul>&lt;!&ndash; /.sponsor-list &ndash;&gt;-->
 
 		</div><!-- /.inner -->
 	</section><!-- /#staff -->
