--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -1,108 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,user-scalable=0">
-	<title>関西フロントエンドカンファレンス2016</title>
+	<%- include('_head', {title:"サイトタイトル"}); %>
 
-	<meta name="description" content="関西最大級のフロントエンドの祭典、forntend conference 2016!! 大阪梅田 にて 2016.03.05 開催!">
-	<meta name="keywords" content="フロントエンド,関西フロントエンドUG,関西フロントエンドカンファレンス2016">
-	<meta property="og:title" content="関西フロントエンドカンファレンス2016">
-	<meta property="og:type" content="article">
-	<meta property="og:url" content="http://kfug.github.io/frontconf2016/">
-	<meta property="og:site_name" content="関西フロントエンドカンファレンス2016">
-	<meta property="og:description" content="関西最大級のフロントエンドの祭典、forntend conference 2016!! 大阪梅田 にて 2016.03.05 開催!">
-	<meta property="og:image" content="http://kfug.github.io/frontconf2016/img/">
-
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" media="all">
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/ihover.min.css">
-	<link rel="stylesheet" href="css/hover.css">
-	<link rel="stylesheet" href="css/style.css">
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-
-	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	<script type="text/javascript" src="js/functions.js"></script>
 
 	<script type="text/javascript" charset="utf-8" src="edge_includes/edge.6.0.0.min.js"></script>
 
-<script>
-  AdobeEdge.loadComposition('main', 'EDGE-10196486', {
-    scaleToFit: "none",
-    centerStage: "none",
-    minW: "0px",
-    maxW: "undefined",
-    width: "980px",
-    height: "500px"
-}, {dom: [ ]}, {
-    dom: [
-        {
-            id: 'bg_pattern',
-            type: 'image',
-            tag: 'img',
-            rect: ['0px', '0px', '980px', '500px', 'auto', 'auto'],
-            fill: ["rgba(0,0,0,0)",'img/bg_pattern.jpg','0px','0px']
-        },
-        {
-            id: 'bg_shape_l2',
-            type: 'image',
-            tag: 'img',
-            rect: ['0px', '231px', '215px', '221px', 'auto', 'auto'],
-            fill: ["rgba(0,0,0,0)",'img/bg_shape_l.png','0px','0px']
-        },
-        {
-            id: 'bg_shape_r2',
-            type: 'image',
-            tag: 'img',
-            rect: ['752px', '0px', '228px', '243px', 'auto', 'auto'],
-            fill: ["rgba(0,0,0,0)",'img/bg_shape_r.png','0px','0px']
-        },
-        {
-            id: 'mainttl',
-            type: 'image',
-            tag: 'img',
-            rect: ['220px', '121px', '539px', '245px', 'auto', 'auto'],
-            fill: ["rgba(0,0,0,0)",'img/mainttl.png','0px','0px']
-        }
-    ],
-    style: {
-        '${symbolSelector}': {
-            isStage: true,
-            rect: [undefined, undefined, '980px', '500px']
-        }
-    }
-});
-</script>
+	<script>
+		AdobeEdge.loadComposition('main', 'EDGE-10196486', {
+			scaleToFit: "none",
+			centerStage: "none",
+			minW: "0px",
+			maxW: "undefined",
+			width: "980px",
+			height: "500px"
+		}, {dom: [ ]}, {
+			dom: [
+				{
+					id: 'bg_pattern',
+					type: 'image',
+					tag: 'img',
+					rect: ['0px', '0px', '980px', '500px', 'auto', 'auto'],
+					fill: ["rgba(0,0,0,0)",'img/bg_pattern.jpg','0px','0px']
+				},
+				{
+					id: 'bg_shape_l2',
+					type: 'image',
+					tag: 'img',
+					rect: ['0px', '231px', '215px', '221px', 'auto', 'auto'],
+					fill: ["rgba(0,0,0,0)",'img/bg_shape_l.png','0px','0px']
+				},
+				{
+					id: 'bg_shape_r2',
+					type: 'image',
+					tag: 'img',
+					rect: ['752px', '0px', '228px', '243px', 'auto', 'auto'],
+					fill: ["rgba(0,0,0,0)",'img/bg_shape_r.png','0px','0px']
+				},
+				{
+					id: 'mainttl',
+					type: 'image',
+					tag: 'img',
+					rect: ['220px', '121px', '539px', '245px', 'auto', 'auto'],
+					fill: ["rgba(0,0,0,0)",'img/mainttl.png','0px','0px']
+				}
+			],
+			style: {
+				'${symbolSelector}': {
+					isStage: true,
+					rect: [undefined, undefined, '980px', '500px']
+				}
+			}
+		});
+	</script>
 </head>
 <body>
-<div id="floating">
-	<p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
-</div><!-- /#floating -->
-<header id="top-head">
-	<div class="inner">
-		<div id="mobile-head">
-			<h1 class="logo"><a href="./"><img src="./img/logo_kfug_lucid.png" alt="" style="height: 1.5em;"></a></h1>
-			<div id="nav-toggle">
-				<div>
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
-			</div>
-		</div>
-		<nav id="global-nav">
-			<ul>
-				<li><a href="#about" class="hvr-underline-from-center">ABOUT</a></li>
-				<li><a href="#news" class="hvr-underline-from-center">NEWS</a></li>
-				<!-- <li><a href="#timetable" class="hvr-underline-from-center">TIME TABLE</a></li> -->
-				<li><a href="#access" class="hvr-underline-from-center">ACCESS</a></li>
-				<li><a href="#speaker" class="hvr-underline-from-center">SPEAKER</a></li>
-				<li><a href="#faq" class="hvr-underline-from-center">FAQ</a></li>
-				<li><a href="#contact" class="hvr-underline-from-center">CONTACT</a></li>
-			</ul>
-		</nav>
-	</div>
-</header>
+<%- include('_header', {title:"サイトタイトル"}); %>
 
 
 <div id="content-wraper">
@@ -187,7 +141,7 @@
 				<% speakers.forEach(function(speaker){ %>
 				<li>
 					<div class="ih-item circle colored effect1">
-						<a data-href="speaker.html#<%=speaker.code%>"><div class="spinner"></div>
+						<a href="speaker.html#<%=speaker.code%>"><div class="spinner"></div>
 							<div class="img">
 								<img src="./images/speakers/<%=speaker.code%>.jpg">
 							</div>
@@ -274,26 +228,9 @@
 		<a href="#content-wraper">PAGE TOP</a>
 	</div>
 
-	<footer>
-		<small>&copy; Kansai Frontend UG</small>
-		<ul class="snsbox cf">
-				<li><a href="https://www.facebook.com/groups/kansai.frontend/" target="_blank">facebook</a></li>
-				<li><a href="https://twitter.com/frontkansai" target="_blank">twitter</a></li>
-				<li><a href="http://kfug.connpass.com/" target="_blank">connpass</a></li>
-			</ul>
-	</footer>
+	<%- include('_footer', {title:"サイトタイトル"}); %>
 </div>
 <!-- /#contentWraper -->
-
-
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-66526811-4', 'auto');
-  ga('send', 'pageview');
-</script>
+<%- include('_ga'); %>
 </body>
 </html>
