--- a/ejs/_socials.ejs
+++ b/ejs/_socials.ejs
@@ -9,7 +9,7 @@
     </li>
     <li>
         <a class="twitter btn hvr-float"
-           href="http://twitter.com/share?url=<%=url%>&text=<%=msg%>msg&via=@frontkansai"
+           href="http://twitter.com/share?url=<%=url%>&text=<%=msg%>&via=frontkansai"
            target="_blank">
             <span class="icon-twitter">tweetする</span>
         </a>
