スポンサーリンク付与

--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -205,7 +205,7 @@
 
 			<ul class="sponsor-list">
 				<% sponsors.forEach(function(sponsor){ %>
-				<li><a data-href="#" target="_blank"><img width="80%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
+				<li><a href="<%=sponsor.link %>" target="_blank"><img width="80%" src="./images/sponsors/<%=sponsor.code%>.png"></a></li>
 				<% })%>
 			</ul><!-- /.sponsor-list -->
 
