ヘッダ複数ページ対応

--- a/ejs/_header.ejs
+++ b/ejs/_header.ejs
@@ -1,3 +1,5 @@
+<%var url = (top)?"":"./";%>
+
 <div id="floating">
     <p><a href="http://the-frontend-conference-2016.peatix.com/" target="_blank">優先参加チケット付き!! <br class="sp_ib">個人/企業スポンサー募集中です。</a></p>
 </div><!-- /#floating -->
@@ -15,13 +17,13 @@
         </div>
         <nav id="global-nav">
             <ul>
-                <li><a href="#about" class="hvr-underline-from-center">ABOUT</a></li>
-                <li><a href="#news" class="hvr-underline-from-center">NEWS</a></li>
+                <li><a href="<%=url%>#about" class="hvr-underline-from-center">ABOUT</a></li>
+                <li><a href="<%=url%>#news" class="hvr-underline-from-center">NEWS</a></li>
                 <!-- <li><a href="#timetable" class="hvr-underline-from-center">TIME TABLE</a></li> -->
-                <li><a href="#access" class="hvr-underline-from-center">ACCESS</a></li>
-                <li><a href="#speaker" class="hvr-underline-from-center">SPEAKER</a></li>
-                <li><a href="#faq" class="hvr-underline-from-center">FAQ</a></li>
-                <li><a href="#contact" class="hvr-underline-from-center">CONTACT</a></li>
+                <li><a href="<%=url%>#access" class="hvr-underline-from-center">ACCESS</a></li>
+                <li><a href="<%=url%>#speaker" class="hvr-underline-from-center">SPEAKER</a></li>
+                <li><a href="<%=url%>#faq" class="hvr-underline-from-center">FAQ</a></li>
+                <li><a href="<%=url%>#contact" class="hvr-underline-from-center">CONTACT</a></li>
             </ul>
         </nav>
     </div>
