--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -56,7 +56,7 @@
 	</script>
 </head>
 <body>
-<%- include('_header', {title:"サイトタイトル"}); %>
+<%- include('_header', {top:true}); %>
 
 
 <div id="content-wraper">
