--- a/ejs/speaker.ejs
+++ b/ejs/speaker.ejs
@@ -13,7 +13,7 @@
 	</style>
 </head>
 <body id="speaker">
-<%- include('_header', {title:"サイトタイトル"}); %>
+<%- include('_header', {top:false}); %>
 
 
 <div id="content-wraper">
