一部標準ブラウザにおける画像の表示バグ対応

--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -138,10 +138,12 @@
 
 					<p>2016/03/05 土曜日</p>
 					<p>10:00 - 18:00 (別途懇親会を予定)</p>
-
+					<br>
 					<h4>会場</h4>
-					<p>新梅田研研修センター &nbsp; <a href="http://www.temmacenter.com/shin_umeda/access/index.html" target="_blank">公式サイト</a></p>
+					<p>新梅田研修センター &nbsp; <a href="http://www.temmacenter.com/shin_umeda/access/index.html" target="_blank">公式サイト</a></p>
 					<p>JR大阪駅 より 徒歩 10分</p>
+					<p>JR大阪駅よりシャトルバスも運行</p>
+					<p>詳しくは<a href="http://www.temmacenter.com/shin_umeda/access/index.html#access01">公式HP</a>をチェック!!</p>
 				</div>
 			</div><!-- /.mapbox -->
 		</div><!-- /.inner -->
@@ -157,7 +159,7 @@
 					<div class="ih-item circle colored effect1">
 						<a href="speaker.html#<%=speaker.code%>"><div class="spinner"></div>
 							<div class="img">
-								<img src="./images/speakers/<%=speaker.code%>.jpg">
+								<img style="height: inherit" src="./images/speakers/<%=speaker.code%>.jpg">
 							</div>
 							<div class="info">
 								<div class="info-back">
