スペル修正

--- a/ejs/index.ejs
+++ b/ejs/index.ejs
@@ -179,7 +179,7 @@
 		<div class="inner">
 			<h2><i class="fa fa-question"></i><span>FAQ</span></h2>
 
-			<p class="cs">comming soon!</p><!-- /.cs -->
+			<p class="cs">coming soon!</p><!-- /.cs -->
 
 			<!-- <dl class="faq-col">
 				<dt>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</dt>
@@ -218,7 +218,7 @@
 		<div class="inner">
 			<h2><i class="fa fa-users"></i><span>Staff</span></h2>
 
-			<p class="cs">comming soon!</p><!-- /.cs -->
+			<p class="cs">coming soon!</p><!-- /.cs -->
 			<!--<ul class="staff-list">-->
 				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
 				<!--<li><a href="#" target="_blank"><img src="http://placehold.it/800x800/27709b/ffffff"><span>苗字 名前</span></a></li>-->
